:memo: :: clean code