@@ -4,21 +4,22 @@ import kr.pe.afterschool.global.error.exception.EncodeFailedException;
 import org.springframework.stereotype.Component;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Component
 public class StringParser {
 
     public String mealConvert(String originString) {
-        return originString.replaceAll("[0-9].", "")
+        return originString.replaceAll("\\d.", "")
                 .replaceAll("[()]", "")
                 .replaceAll("\\.", "")
-                .replaceAll("  ", "")
+                .replaceAll(" {2}", "")
                 .replaceAll("<br/>", ", ");
     }
 
     public String encodeKorean(String originString) {
         try {
-            return URLEncoder.encode(originString, "UTF-8");
+            return URLEncoder.encode(originString, StandardCharsets.UTF_8);
         } catch (Exception e) {
             throw EncodeFailedException.EXCEPTION;
         }
